# dbt-mcp-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/dbt_mcp_server/: __init__.py  manifest.py  server.py
src/dbt_mcp_server/tools/: __init__.py  docs.py  failures.py  lineage.py  sources.py  suggest.py
tests/: test_tools.py
tests/fixtures/: manifest_v12.json  run_results.json
