[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-mcp-server"
version = "0.1.0"
description = "MCP server that exposes a dbt project's manifest.json to claude: lineage, docs coverage, and test failures in plain english."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "vladrosant" }]
keywords = ["dbt", "mcp", "model-context-protocol", "analytics-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dbt-mcp-server = "dbt_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/vladrosant/dbt-mcp-server"
Repository = "https://github.com/vladrosant/dbt-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_mcp_server"]
